# MyWebApp

./: ONBOARDING.md  index.html
Print Queue/print-queue/: .env.example  .gitignore  Caddyfile  DEPLOY_DAY_1.md  Dockerfile  README.md  RUNBOOK.md  alembic.ini  apply_cloud_bridge.sh  cloud_bridge_v2.sh  docker-compose.yml  install_access.sh  install_update.sh  pyproject.toml
Print Queue/print-queue/.github/workflows/: ci.yml
Print Queue/print-queue/alembic/: env.py
Print Queue/print-queue/alembic/versions/: 0001_users_and_magic_links.py  0002_submissions.py  0003_printers.py  0004_users_and_comments.py
Print Queue/print-queue/app/: config.py  database.py  logging.py  main.py
Print Queue/print-queue/app/admin/: __init__.py  routes.py  stats_service.py  users_service.py
Print Queue/print-queue/app/auth/: bootstrap.py  deps.py  routes.py  service.py  tokens.py
Print Queue/print-queue/app/comments/: __init__.py  service.py
Print Queue/print-queue/app/email/: resend_client.py
Print Queue/print-queue/app/models/: __init__.py  comment.py  file.py  magic_link.py  printer.py  submission.py  submission_event.py  user.py
Print Queue/print-queue/bridge/: Dockerfile  __init__.py  app_client.py  buffer.py  config.py  main.py  parser.py  printer.py
Print Queue/print-queue/scripts/: backup.sh
Print Queue/print-queue/tests/: conftest.py  test_admin.py  test_auth.py  test_bridge_buffer.py  test_bridge_parser.py  test_comments.py  test_health.py  test_notifications.py  test_permissions.py  test_printers.py  test_submissions.py
padops/: index.html
(+31 files in other folders)
