[project]
name = "print-queue"
version = "0.1.0"
description = "Team 3D-print queue and live printer telemetry"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "itsdangerous>=2.2",
    "httpx>=0.27",
    "structlog>=24.4",
    "sentry-sdk[fastapi]>=2.18",
    "email-validator>=2.2",
    "aiofiles>=24.1",
    "paho-mqtt>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "black>=24.10",
    "aiosqlite>=0.20",  # tests use sqlite
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.admin", "app.auth", "app.comments", "app.email", "app.models", "app.notifications", "app.printers", "app.routes", "app.storage", "app.submissions", "bridge"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
# B008: FastAPI's Depends/Form/Cookie are designed to be used in argument defaults
ignore = ["E501", "B008", "SIM105"]  # black handles line length; try/except: pass is fine

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
